[package]
name = "mihno"
version = "0.1.1" #f193c894e0f896ea08f4396fa83eb61949aa43d931078b337bed80591caa1262
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
base64 = "0.13.0"
