[package]
name = "mihno"
version = "0.1.2" #5aedbcfdfd6cf03dc48f8af74b887bad46bb559df5daddacb9e960d7af12269e
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
base64 = "0.13.0"
