[package]
name = "mihno"
version = "0.1.3" # 7e65002f3d5bae04afc4f0b66c14e4bed56680e2ffae3b86f4209e607cffdadb
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.4", features = ["serde", "v4"] }
base64 = "0.13.0"
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
